# nbodies

./: README.md  body.h  cmake_install.cmake  graphics.cpp  main.cpp  tester.cpp  tester.h
Archive/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graphics.h  nbodies  simulation.h
Archive/tests/: 001.in  128.in  flush.js  t05.js
tests/: 000.in  1024.in  circle.js  cube.js  cube2.in
